# responder

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTORS.md  DEVELOP.md  LICENSE  Makefile  Pipfile  README.md  api.html  app.py  backlog.html  changes.html  cli.html  clientgen.html  deployment.html  g.py  genindex.html  guide-config.html  index.html  migration-v5.html  migration-v7.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  requirements-dev.txt  requirements.txt  routers.html  runtime-contracts.html  sandbox.html  search.html  (+13 more)
.claude/commands/: release.md
.doctrees/: api.doctree  backlog.doctree  changes.doctree  cli.doctree  clientgen.doctree  deployment.doctree  environment.pickle  guide-config.doctree  index.doctree  migration-v5.doctree  migration-v7.doctree  quickstart.doctree  routers.doctree  runtime-contracts.doctree  sandbox.doctree  testing.doctree  tour.doctree  tutorial-auth.doctree  tutorial-flask.doctree  tutorial-middleware.doctree  tutorial-rest.doctree  tutorial-sqlalchemy.doctree  tutorial-websockets.doctree
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-docs.yml  docs.yaml  lint.yaml  test.yaml
_modules/: index.html
_modules/responder/: api.html  background.html  models.html  params.html  routes.html  routing.html  status_codes.html
_modules/responder/ext/: ratelimit.html  sessions.html
_sources/: api.rst.txt  backlog.md.txt  changes.md.txt  cli.rst.txt  clientgen.rst.txt  deployment.rst.txt  guide-config.rst.txt  index.rst.txt  migration-v7.rst.txt  quickstart.rst.txt  runtime-contracts.rst.txt  sandbox.md.txt  testing.rst.txt  tour.rst.txt  tutorial-flask.rst.txt  tutorial-middleware.rst.txt  tutorial-rest.rst.txt  tutorial-sqlalchemy.rst.txt  tutorial-websockets.rst.txt
_sphinx_design_elements_static/: design-elements.bbdccc18c4abea9397628f9fea3d48c2.js  design-elements.e5416f61bae5d36adc6d722a2b6f8cff.css
_static/: alabaster.css  documentation_options.js  konami.js
_static/fonts/692185/: 046446108A9C4012D.css  05C79D32FCC9C51A0.css  0AC552691F872135E.eot  16B543D7FF26ED8B0.css  196C9CB6EE09F9C87.eot  34448F455F4637FAE.css  36CE8674C2969C023.css  38E1928CA439EA8B1.css  3938E30FCCC16A40D.css  395CE06A8C69E5D38.eot  3A8BFAC68DBAFAE43.eot  4BB5B4844BF0A1875.css  74CFCDB908279DAC2.css  8CE05FA3739464866.css  96D5C750E04949CB8.css  A96F219E64C7FE405.eot  A9A88AFAC61805CF6.css  AA83D0999C9464BC6.eot  C6C963850F2B23EF7.css  D846106C3A83BE1AF.css  E0416EDBE90327601.eot  E39173F6B506EEF59.eot  F0CC66E00773EB848.css  F3359BE670A39380E.css  FA5D2C248B6AEC96E.css  FDCC918E4493D6D80.css  FEF51E0A8EF01CA90.css
benchmarks/: django_minimal.py  flask_app.py  quart_app.py  sanic_app.py  starlette_app.py  tornado_app.py  vibora_app.py
benchmarks/django_full/: manage.py
benchmarks/django_full/django_app/: apps.py  urls.py  views.py
benchmarks/django_full/django_full/: settings.py  urls.py  wsgi.py
benchmarks/responder_app/: responder_app.py
docs/: migration-v5.md  migration-v6.md  requirements.txt
docs/source/: api.rst  backlog.md  cli.rst  clientgen.rst  conf.py  deployment.rst  guide-config.rst  index.rst  migration-v5.md  migration-v7.rst  quickstart.rst  routers.rst  runtime-contracts.rst  sandbox.md  testing.rst  tour.rst  tutorial-auth.rst  tutorial-flask.rst  tutorial-middleware.rst  tutorial-rest.rst  tutorial-sqlalchemy.rst  tutorial-websockets.rst
docs/source/_static/: custom.css  konami.js
docs/source/_static/fonts/692127/: 005CED86771E6F899.eot  (+21 more)
docs/source/_templates/: hacks.html  sidebarintro.html  sidebarlogo.html
examples/: another_one.py  another_one2.py  atelier.py  endpoint_request_methods.py  fortunes.py  hello_data.py  hello_expect.py  hello_form.py  hello_fortune.py  hello_schema_doc.py  hello_world.py  helloworld.py  lifespan.py  marimo_mount.py  request_validation.py  response_validation.py  rest_api.py  schema_validation.py  shortlinks.py  sse_stream.py  tarot.py  todo.py  user.py  webhooks.py  websocket_chat.py
examples/heroku/: Pipfile  Procfile  requirements.txt  server.py
examples/notebooks/: hello.py
ext/: responder-logo.ai
responder/: __init__.py  __version__.py  api.py  background.py  cli.py  core.py  endpoints.py  errors.py  formats.py  graphiql.py  middleware.py  models.py  params.py  routes.py  routing.py  staticfiles.py  statics.py  status_codes.py  templates.py  testing.py  types.py  views.py
responder/ext/: __init__.py  auth.py  cli.py  clientgen.py  graphql.py  logging.py  metrics.py  pagination.py  query.py  ratelimit.py  sessions.py
responder/ext/graphql/: __init__.py  templates.py
responder/ext/openapi/: __init__.py
responder/ext/openapi/docs/: elements.html  redoc.html  swagger_ui.html
responder/ext/schema/: __init__.py
responder/ext/schema/docs/: rapidoc.html  redoc.html
responder/middlewares/: trustedhost.py
responder/templates/: graphiql.html
responder/util/: cmd.py  common.py  net.py  python.py
scripts/: release.py  release_check.py
static/: index.html
templates/: test.html
test/: Pipfile  server.py
tests/: conftest.py  fixtures.py  test_annotated_markers.py  test_async_backends.py  test_auth.py  test_background_async.py  test_cli.py  test_clientgen.py  test_clientgen_pathparam_escaping.py  test_composable_di.py  test_concurrency_hardening.py  test_content_type_case.py  test_contract_app.py  test_cookies_vary.py  test_correctness_fixes.py  test_coverage.py  test_dependencies.py  test_dependency_overrides.py  test_deprecations_v6.py  test_di_nesting.py  test_dispatch_fixes_80.py  test_download_filename.py  test_encodings.py  test_examples.py  test_file_conditional.py  test_fortunes_example.py  test_generic_response_model.py  test_graphql.py  test_graphql_async_resolvers.py  test_graphql_get_csrf.py  test_health.py  test_hsts.py  test_http_semantics.py  test_improvements.py  test_load_target.py  test_logging.py  test_marker_constraints.py  test_method_case.py  test_middleware_stack.py  test_models.py  (+46 more)
(+69 files in other folders)
